[package]
name = "generate-artifacts"
version = "0.1.0"
edition = "2021"
authors = ["Kuba Karpierz <mr.karpierz@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
wire-structs = { path = "../wire_structs" }
glam = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
flexbuffers  = "2.0.0"
serde_json = { version = "1.0.82", features = ["float_roundtrip"] }

[dev-dependencies]
test-utils = { path = "../test_utils" }