[package]
name = "path-integration"
version = "0.1.0"
edition = "2021"
authors = ["Kuba Karpierz <mr.karpierz@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = "0.21.1"
quaternion = "0.4.1"

[dev-dependencies]
plotters = {version= "0.3.1", features = ['bitmap_encoder']}
criterion = "0.3"

[[bench]]
name = "path"
harness = false

[[bench]]
name = "ray_cache"
harness = false