[package]
name = "path-integration"
version = "0.1.0"
edition = "2021"
authors = ["Kuba Karpierz <mr.karpierz@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = "0.21.1"
quaternion = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.82", features = ["float_roundtrip"] }
rmp-serde="1.1.0"
bson = "2.3.0"
flexbuffers  = "2.0.0"
[dev-dependencies]
test-utils = { path = "../test_utils" }
plotters = {version= "0.3.1", features = ['bitmap_encoder']}
criterion = "0.3"

[[bench]]
name = "path"
harness = false