[package]
name = "rendering"
version = "0.1.0"
authors = ["Kuba Karpierz <mr.karpierz@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
path-integration = { path = "../path_integration" }
image = "0.24.2"
glam = "0.21.1"
fast-math = "0.1.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "render"
harness = false