[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Kuba Karpierz <mr.karpierz@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.58"
cfg-if = "1.0.0"
wasm-bindgen = "0.2.81"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlTexture',
  'WebGlProgram',
  'WebGlShader',
  'Location',
  'Window',
  'WebGlRenderingContext', 'WebGlUniformLocation',
  'console',
  'WebGlFramebuffer',
  'WebGlRenderbuffer',
  'HtmlInputElement',
  'HtmlOptionElement',
  'HtmlSelectElement',

]

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
wasm-opt = ['-O4', '-g']