[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Kuba Karpierz <mr.karpierz@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.58"
cfg-if = "1.0.0"
wasm-bindgen = "0.2.81"
wasm-timer = "0.2.5"
rendering = { path = "../rendering" }
path-integration = { path = "../path_integration" }
generate-artifacts = { path = "../generate_artifacts" }
glam = "0.21.1"
image = "0.24.2"
wasm-bindgen-futures = "0.4.31"
serde = "1.0"
serde_json = { version = "1.0.82", features = ["float_roundtrip"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'TouchEvent',
  'TouchList',
  'Touch',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlTexture',
  'WebGlProgram',
  'WebGlShader',
  'Location',
  "ImageData",
  "Response",
  'Window',
  'WebGlRenderingContext', 
  'WebGlUniformLocation',
  'console',
  'WebGlFramebuffer',
  'WebGlRenderbuffer',
  'HtmlInputElement',
  'HtmlOptionElement',
  'HtmlImageElement',
  'HtmlTextAreaElement',
  'HtmlButtonElement',
  'HtmlSelectElement',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'WheelEvent',
  'Node',
  'Window',
  'InputEvent',
  'Document',
  'Request',
  'RequestInit',
  'RequestMode',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[package.metadata.wasm-pack.profile.debug]
wasm-opt = ['-O4', '-g']
[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
wasm-opt = ['-O4', '-g']