[package]
name = "web_wgpu"
version = "0.1.0"
authors = ["Kuba Karpierz <mr.karpierz@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0"
cfg-if = "1"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }

 [dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
 

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
  'WebGl2RenderingContext',
  'HtmlCanvasElement',
]}
 
[package.metadata.wasm-pack.profile.debug]
wasm-opt = ['-O4', '-g']
[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
wasm-opt = ['-O4', '-g']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false