[package]
name = "wire-structs"
version = "0.1.0"
edition = "2021"
authors = ["Kuba Karpierz <mr.karpierz@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.82", features = ["float_roundtrip"] }

#path generation
glam = "0.21.1"
itertools = "0.10.3"

# graphics
wgpu = "0.13"
bytemuck = { version = "1.4", features = [ "derive" ] }
pollster = "0.2"
futures-intrusive = "0.4.0"